--- a/feature_add_alarm/src/main/res/layout/add_alarm_fragment.xml
+++ b/feature_add_alarm/src/main/res/layout/add_alarm_fragment.xml
@@ -5,9 +5,10 @@
     android:layout_height="match_parent"
     tools:context=".presentation.AddAlarmFragment">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Add alarm" />
+    <Button
+        android:id="@+id/schedule_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Schedule alarm" />
 
 </FrameLayout>
