Alarms, and canceling them

--- a/feature_alarms/src/main/res/layout/alarm_item.xml
+++ b/feature_alarms/src/main/res/layout/alarm_item.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:padding="10dp">
 
@@ -10,14 +10,22 @@
         android:layout_height="50dp"
         android:src="@drawable/ic_alarm"
         android:tint="@color/design_default_color_secondary" />
+    <ImageButton
+        android:id="@+id/delete_button"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:background="@android:color/transparent"
+        android:src="@drawable/ic_delete"
+        android:tint="@color/design_default_color_secondary" />
+
 
     <TextView
         android:id="@+id/time_textView"
-        android:textSize="30sp"
-        android:paddingLeft="30dp"
-        android:text="12;30;40"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-
+        android:layout_height="wrap_content"
+        android:paddingLeft="30dp"
+        android:paddingRight="30dp"
+        android:text="12;30;40"
+        android:textSize="20sp" />
 
 </LinearLayout>
