--- a/feature_alarms/src/main/res/layout/alarms_fragment.xml
+++ b/feature_alarms/src/main/res/layout/alarms_fragment.xml
@@ -1,18 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
     tools:context=".presentation.AlarmsFragment">
 
 
     <androidx.recyclerview.widget.RecyclerView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:id="@+id/alarms_recyclerView"
-        />
-
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -21,7 +20,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="20dp"
-        app:fabSize="normal"
-        android:src="@drawable/ic_plus"/>
+        android:src="@drawable/ic_plus"
+        app:fabSize="normal" />
 
 </LinearLayout>
